--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,12 @@
 streamlit>=1.36
 langchain>=0.2.11
 langchain-community>=0.2.11
-langchain-huggingface>=0.0.7
-langchain-openai>=0.1.22
 rank-bm25>=0.2.2
 faiss-cpu>=1.8.0
 sentence-transformers>=2.7.0
+transformers>=4.41.0
+accelerate>=0.33.0
+torch>=2.1,<3
+langchain_huggingface
+langchain-openai
 
